--- a/themes/base_files/scss/_tiki-external_scripts_overrides.scss
+++ b/themes/base_files/scss/_tiki-external_scripts_overrides.scss
@@ -28,6 +28,13 @@ div.form-group label.error {
 
 // Chosen is calculating the widths wrong (too narrow) so this is a crude workaround.
 .tiki .input-group .chosen-container { width: 110% !important; }
+// Lets exclude the above to trackers because buttons appear on the second line
+.tiki-admin_tracker_fields, .tiki-view_tracker {
+	.input-group .chosen-container {
+		width: auto !important;
+	}
+}
+
 .tiki .chosen-container-single,
 .tiki #assign_order_chosen.chosen-container {
 	min-width: 5em;
